2005-08-23  David Moore  <dcm@acm.org>

	* iptc-data.c, iptc-data.h: added iptc_data_sort() function
	* iptc/main.c: added -s argument to sort datasets

2005-08-18  David Moore  <dcm@acm.org>

	* iptc/main.c: fields longer than 256 bytes will print correctly
	* various files: fixed compile warnings with gcc 4.0

2005-06-07  David Moore  <dcm@acm.org>

	* TODO: added new desired features
	* libiptcdata/Makefile.am: make sure _stdint.h gets installed

2005-05-31  David Moore  <dcm@acm.org>

	* NEWS, configure.in: Updated for release 0.1.2.

2005-04-14  David Moore  <dcm@acm.org>

	* win: Added new Visual Studio project and changes necessary to build
	libiptcdata in Windows.
	Contributed by Luka Renko <luka.renko@gmail.com>
	* win: Windows build fixes

2005-04-13  David Moore  <dcm@acm.org>

	* iptc-jpeg.c: Skip over all headers in search of APP13 to improve
	compatability with some applications.
	* TODO: Updated
	* iptc-*.c: Removed some unnecessary header references.

2005-03-09  David Moore  <dcm@acm.org>

	* iptc-dataset.c: Improved the handling of datasets with zero-length
	data.

2005-03-07  David Moore  <dcm@acm.org>

	* iptc-jpeg.c (iptc_jpeg_seek_to_ps3): Fixed parsing error for some
	jpeg files.
	* NEWS: Updated for new release

2005-03-06  David Moore  <dcm@acm.org>

	* iptc-dataset.c, iptc-dataset.h: added date/time manipulation
	functions iptc_dataset_get_date(), iptc_dataset_get_time(),
	iptc_dataset_set_date(), and iptc_dataset_set_time().
	* configure.in: bumped version number to 0.1.1 and library
	current:revision:age to 1:0:1.

2005-03-02  David Moore  <dcm@acm.org>

	* iptc-dataset.h: Fixed copyright notice

2005-02-28  David Moore  <dcm@acm.org>

	* Initial version
